[gd_scene load_steps=2 format=3 uid="uid://c1r2g5s3a2r6n"]

[ext_resource type="Script" path="res://Scripts/ui/phase3_test_scene.gd" id="1_1m3p5"]

[node name="Phase3TestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1m3p5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Phase 3: シーン遷移システム テスト"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "システム状態: 読み込み中..."
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LoadScenariosButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
text = "シナリオライブラリ読み込み"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="ScenarioLabel" type="Label" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
text = "シナリオ:"
size_flags_horizontal = 0

[node name="ScenarioList" type="OptionButton" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="SceneLabel" type="Label" parent="VBoxContainer/Controls/HBoxContainer2"]
layout_mode = 2
text = "シーン:"
size_flags_horizontal = 0

[node name="SceneList" type="OptionButton" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="TransitionLabel" type="Label" parent="VBoxContainer/Controls/HBoxContainer3"]
layout_mode = 2
text = "遷移タイプ:"
size_flags_horizontal = 0

[node name="TransitionType" type="OptionButton" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="StartScenarioButton" type="Button" parent="VBoxContainer/Controls/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "シナリオ開始"

[node name="JumpSceneButton" type="Button" parent="VBoxContainer/Controls/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "シーンジャンプ"

[node name="GoBackButton" type="Button" parent="VBoxContainer/Controls/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "戻る"

[node name="TestButtonsContainer" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="TestAllButton" type="Button" parent="VBoxContainer/Controls/TestButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "全機能テスト"

[node name="GetStatusButton" type="Button" parent="VBoxContainer/Controls/TestButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ステータス取得"

[node name="ClearLogButton" type="Button" parent="VBoxContainer/Controls/TestButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ログクリア"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LogLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "テストログ:"

[node name="TestLog" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "ここにテスト結果が表示されます..."
editable = false
wrap_mode = 1